Add developer reference to footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 IP Calculator. Built with vanilla HTML, CSS, and JavaScript.</p>
+            <p>&copy; 2025 IP Calculator. Built with vanilla HTML, CSS, and JavaScript.</p>
+            <p>Developed by Nicolai Tufar ntufar@gmail.com</p>
         </footer>
     </div>
 
