Fix CIDR input label and placeholder to match actual input format

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <section class="calculator-section">
                 <h2>CIDR to Subnet Mask & IP Range</h2>
                 <div class="input-group">
-                    <label for="cidr-input">CIDR Notation (e.g., /24 or /64):</label>
-                    <input type="text" id="cidr-input" placeholder="/24" aria-describedby="cidr-help">
+                    <label for="cidr-input">CIDR Notation (e.g., 24 or 64):</label>
+                    <input type="text" id="cidr-input" placeholder="24" aria-describedby="cidr-help">
                     <small id="cidr-help">Enter CIDR value (0-128)</small>
                 </div>
 
