--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>CIDR to Subnet Mask & IP Range</h2>
                 <div class="input-group">
                     <label for="cidr-input">CIDR Notation (e.g., /24 or /64):</label>
-                    <input type="text" id="cidr-input" placeholder="/24" aria-describedby="cidr-help" title="Enter CIDR prefix length with or without slash (0-128)">
+                    <input type="text" id="cidr-input" placeholder="/24" value="/24" aria-describedby="cidr-help" title="Enter CIDR prefix length with or without slash (0-128)">
                     <small id="cidr-help">Enter CIDR value with or without slash (0-128) - IPv4: 0-32, IPv6: 0-128</small>
                     <span class="input-status" id="cidr-status"></span>
                 </div>
