--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <div class="input-row">
                     <div class="input-group">
                         <label for="ip-input">IP Address:</label>
-                        <input type="text" id="ip-input" placeholder="192.168.1.1" aria-describedby="ip-help" title="Enter IPv4 or IPv6 address">
+                        <input type="text" id="ip-input" placeholder="192.168.1.1" value="192.168.1.1" aria-describedby="ip-help" title="Enter IPv4 or IPv6 address">
                         <span class="input-status" id="ip-status"></span>
                     </div>
                     <div class="input-group">
                         <label for="mask-input">Subnet Mask:</label>
-                        <input type="text" id="mask-input" placeholder="255.255.255.0" aria-describedby="mask-help" title="Enter subnet mask in dotted decimal format">
+                        <input type="text" id="mask-input" placeholder="255.255.255.0" value="255.255.255.0" aria-describedby="mask-help" title="Enter subnet mask in dotted decimal format">
                         <span class="input-status" id="mask-status"></span>
                     </div>
                 </div>
